@@ -138,7 +138,7 @@ static const struct option longopts[] = {
     { "patch"                   , required_argument, NULL, 'P' << 8 },
     { "mute"                    , required_argument, NULL, 'Q' << 8 },
     { "cache-size"              , required_argument, NULL, 'S' << 8 },
-    { "tempo"                   , required_argument, NULL, 'T' << 8 },
+    { "adjust-tempo"            , required_argument, NULL, 'T' << 8 },
     { "no-unload-instruments"   ,       no_argument, NULL, 'U' << 8 },
     { "unload-instruments"      , optional_argument, NULL, 'U' << 8 },
     { "freq-table"              , required_argument, NULL, 'Z' << 8 },
@@ -162,7 +162,7 @@ static const struct option longopts[] = {
     { "polyphony"               , required_argument, NULL, 'p' << 8 },
     { "audio-buffer"            , required_argument, NULL, 'q' << 8 },
     { "sampling-freq"           , required_argument, NULL, 's' << 8 },
-    { "text-convertion"         , required_argument, NULL, 't' << 8 },
+    { "output-charset"          , required_argument, NULL, 't' << 8 },
     { "version"                 ,       no_argument, NULL, 'v' << 8 },
     { "exec"                    , required_argument, NULL, 'x' << 8 },
     { "bit-width"               , required_argument, NULL, 200 << 8 },
@@ -199,8 +199,8 @@ static const struct option longopts[] = {
     { "channel-pressure"        , optional_argument, NULL, 219 << 8 },
     { "no-new-lpf"              ,       no_argument, NULL, 220 << 8 },
     { "new-lpf"                 , optional_argument, NULL, 220 << 8 },
-    { "no-overlap"              ,       no_argument, NULL, 221 << 8 },
-    { "overlap"                 , optional_argument, NULL, 221 << 8 },
+    { "no-overlap-voice"        ,       no_argument, NULL, 221 << 8 },
+    { "overlap-voice"           , optional_argument, NULL, 221 << 8 },
     { "reverb"                  , required_argument, NULL, 222 << 8 },
     { "chorus"                  , required_argument, NULL, 223 << 8 },
     { "delay"                   , required_argument, NULL, 224 << 8 },
